# ChangeLog for sci-visualization/charty
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Mar 2012; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild:
  Switched to EAPI4.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  17 Oct 2011; James Rowe <jnrowe@gmail.com>
  files/charty-0.1.0-fix_example.patch, files/charty-0.1.0-include_css.patch:
  Added patch description.

  07 Apr 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild:
  Keyworded x86.

  06 Apr 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild:
  Keyworded amd64.

  08 Mar 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild:
  Keyworded ~x86.

  07 Mar 2011; James Rowe <jnrowe@gmail.com> charty-0.1.0.ebuild,
  +files/charty-0.1.0-fix_example.patch:
  Fix links to CSS in examples.

*charty-0.1.0 (07 Mar 2011)

  07 Mar 2011; James Rowe <jnrowe@gmail.com> +charty-0.1.0.ebuild,
  +files/charty-0.1.0-include_css.patch, +metadata.xml, +watch:
  Initial ebuild, by me [303].
